--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
     <script src="js/min/waypoints.min.js"></script>
     <script src="js/jquery.counterup.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd1xMYT1bt99qtFWQEzXiRBvORDWHgPtk"></script>
+    
+
     <script src="js/main.js"></script>
     <script src="js/angular.js"></script>
+
     <script src="js/angular-ui-router.js"></script>
+      <script src="https://rawgit.com/angular-ui/angular-google-maps/2.1.5/dist/angular-google-maps.min.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd1xMYT1bt99qtFWQEzXiRBvORDWHgPtk"></script>
   </head>
   <body>
 
