--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                 <div class="block">
                   <h2>We Also Count In Google Map</h2>
                     <div class="google-map">
-                      <ui-gmap-google-map id="map" center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+                          <div id="map"></div>
                     </div>
                 </div>
               </div>
